libpocketbase.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
typedef void (*FlutterBridge)(const char *command, const char *data);
extern FlutterBridge flutterBridge;
extern void callFlutterBridgeHelper(const char* command, const char* data);
typedef unsigned char GoUint8;
typedef long long GoInt64;
typedef GoInt64 GoInt;
typedef _GoString_ GoString;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;
extern void registerBridgeCallback(FlutterBridge callback);
extern void startPocketbase(char* path, char* port, char* hostname, GoUint8 getApiLogs);
extern void stopPocketbase();
extern GoUint8 isRunning();
extern char* getVersion();
extern void enforce_binding();